@@ -1,3 +1,8 @@
+2014-03-29  polarnik  <owasp@ya.ru>
+
+	* LoaderEDocType.cs: загружаются только реквизиты с вычислениями, реквизиты без вычислений не загружаются.
+	* LoaderReference.cs: загружаются только реквизиты с вычислениями, реквизиты без вычислений не загружаются.
+
 2014-03-09  polarnik  <owasp@ya.ru>
 
 	* LoaderAll.cs:
